         New Programs
           lat_util: new program for lattice utilities (by Roger
             Kaufman)
         Changes
           poly_kscope: new options, -c colours a compound by part,
             -S uses the symmetries of another polyhedron, -t tests
             the symmetry type by repeating an arrow
           off_report: new option -S s for a symmetry report
           off_trans: new option -P aligns to standard symmetry type,
             rotate a pair of vectors onto another moved from -A to -R
           off_color: options -m -M -c combined as option -m. Lower
             case colourings always set index, upper case colourings
             always apply colour map. Default colour map is 'rand'.
             New options -vef sS to colour elements by symmetry orbit,
             -f aA to colour by average internal angle,
             -f kK to colour sets of faces connected by face sides,
             -e Kk to colour sets of edges connected by edges,
             -vef M to convert colour indexes to values using map
             -I to convert colour values to indexes
           unipoly,johnson: programs removed, models are in resources
              see 'off_util -H uniform' and 'off_util -H johnson'
           polygon: snub-antiprisms added, antiprism alignment changed
           bravais: option -R also fills and overlays with cubes
           iso_delta: new option -C for colouring
           pol_recip: default centre is centroid, new option -a
             appends dual to original geometry
           antiview,off2vrml,off2pov: new option -s to display
             symmetry elements
           off_util: new option -H for general help, new option -u
             to unfold a polyhedron net, new option -x V deletes
             free vertices
           minmax: new ellipsoid and superellipsoid surfaces, default
             algorithm is v
           Resources: new colour map files and generatable maps,