@@ -10,6 +10,7 @@ xx-xx-09 Adrian Rossiter <adrian@antiprism.com>
              -S uses the symmetries of another polyhedron, -t tests
              the symmetry type by repeating an arrow
            off_report: new option -S s for a symmetry report
+           off_query: new query EC for edge centroids
            off_trans: new option -P aligns to standard symmetry type,
              rotate a pair of vectors onto another moved from -A to -R
            off_color: options -m -M -c combined as option -m. Lower
